# sfop

./: CMakeLists.txt  Makefile.am  README
doc/: Doxyfile.in  Makefile.am
examples/: Makefile.am
matlab/: Makefile.am  gaussFFT.m  loadFeatures.m  sfop.m  sfopParams.m  showFeatures.m
src/: CImageCl.cpp  CImageCl.h  CLayer.cpp  COpenCl.cpp  COpenCl.h  CSfop.cpp  Makefile.am
